--- a/dev/00-intro/02-01-global.html
+++ b/dev/00-intro/02-01-global.html
@@ -160,14 +160,14 @@ creates is identical to the required databases directory structure.</p>
 <p>The databases directory should contain the following structure:</p>
 <pre><code class="language-plaintext">[databases-directory]
  │
- ├─ AEAnnotation
- │  ├─ AEAnnotation*.sqlite
- │  └─ ...
+ ├── AEAnnotation
+ │   ├── AEAnnotation*.sqlite
+ │   └── ...
  │
- ├─ BKLibrary
- │  ├─ BKLibrary*.sqlite
- │  └─ ...
- └─ ...
+ ├── BKLibrary
+ │   ├── BKLibrary*.sqlite
+ │   └── ...
+ └── ...
 </code></pre>
 <h2 id="--force"><a class="header" href="#--force"><code>--force</code></a></h2>
 <p>Run even if Apple Books is currently running.</p>
