--- a/dev/00-intro/02-04-backup.html
+++ b/dev/00-intro/02-04-backup.html
@@ -155,7 +155,7 @@
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Context</td><td><a href="#backup-context">Backup Context</a></td></tr>
 <tr><td>Default</td><td><code>{{ now \| date(format='%Y-%m-%d-%H%M%S')}}-{{ version }}</code></td></tr>
-<tr><td>Example Ouput</td><td><code>1970-01-01-120000-v0.1-00001970-01-01-120000-v5.0-5693</code></td></tr>
+<tr><td>Example Output</td><td><code>1970-01-01-120000-v0.1-0000</code></td></tr>
 </tbody></table>
 </div>
 <h3 id="backup-context"><a class="header" href="#backup-context">Backup Context</a></h3>
