deploy: fded7fb7eb0330bccc1358b59c7c159a80013211

--- a/dev/print.html
+++ b/dev/print.html
@@ -420,6 +420,11 @@ overwritten if they are re-exported.</p>
 <tr><td>Example Output</td><td><code>1970-01-01-120000-v0.1-0000</code></td></tr>
 </tbody></table>
 </div>
+<blockquote>
+<p><i class="fa fa-exclamation-circle"></i> Note that an escaping backslash <code>\</code>
+was required to nest a pipe <code>|</code> inside a markdown table. In other words, the
+default value does not contain a backslash.</p>
+</blockquote>
 <h3 id="backup-context"><a class="header" href="#backup-context">Backup Context</a></h3>
 <div class="table-wrapper"><table><thead><tr><th>Attribute</th><th>Type</th><th>Description</th></tr></thead><tbody>
 <tr><td><code>now</code></td><td>datetime</td><td>the current datetime</td></tr>
