--- a/latest/01-templates/02-01-template-groups.html
+++ b/latest/01-templates/02-01-template-groups.html
@@ -8,6 +8,7 @@
 
         <!-- Custom HTML head -->
         
+        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="A CLI for Apple Books annotations">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -34,13 +35,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script>
+        <script type="text/javascript">
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "ayu" : "ayu";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script>
+        <script type="text/javascript">
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -56,7 +57,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script>
+        <script type="text/javascript">
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -68,7 +69,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script>
+        <script type="text/javascript">
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -81,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html" class="active"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-render.html"><strong aria-hidden="true">1.2.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-export.html"><strong aria-hidden="true">1.2.3.</strong> Export</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-backup.html"><strong aria-hidden="true">1.2.4.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../00-intro/02-05-filter.html"><strong aria-hidden="true">1.2.5.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-06-preprocess.html"><strong aria-hidden="true">1.2.6.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-07-postprocess.html"><strong aria-hidden="true">1.2.7.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html" class="active"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -103,7 +104,7 @@
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu (default)</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
@@ -138,7 +139,7 @@
                 </div>
 
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script>
+                <script type="text/javascript">
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -177,19 +178,19 @@ structure: flat-grouped
 <p>The output will be:</p>
 <pre><code class="language-plaintext">[output-directory]
  ├── my-vault
- │    ├── 2021-11-02-180445-the-art-spirit.md
- │    ├── 2021-11-02-181250-the-art-spirit.md
- │    ├── 2021-11-02-181325-the-art-spirit.md
- │    ├── 2021-11-02-181510-the-art-spirit.md
- │    ├── 2021-11-02-182059-surely-youre-joking-mr-feynman.md
- │    ├── 2021-11-02-182319-think-on-these-things.md
- │    ├── 2021-11-02-182426-think-on-these-things.md
- │    ├── 2021-11-02-182543-think-on-these-things.md
- │    ├── 2021-11-02-182648-think-on-these-things.md
- │    ├── 2021-11-02-182805-think-on-these-things.md
- │    ├── Krishnamurti - Think on These Things.md
- │    ├── Richard P. Feynman - &quot;Surely You're Joking, Mr. Feynman!&quot;.md
- │    └── Robert Henri - The Art Spirit.md
+ │   ├── 2021-11-02-180445-the-art-spirit.md
+ │   ├── 2021-11-02-181250-the-art-spirit.md
+ │   ├── 2021-11-02-181325-the-art-spirit.md
+ │   ├── 2021-11-02-181510-the-art-spirit.md
+ │   ├── 2021-11-02-182059-surely-youre-joking-mr-feynman.md
+ │   ├── 2021-11-02-182319-think-on-these-things.md
+ │   ├── 2021-11-02-182426-think-on-these-things.md
+ │   ├── 2021-11-02-182543-think-on-these-things.md
+ │   ├── 2021-11-02-182648-think-on-these-things.md
+ │   ├── 2021-11-02-182805-think-on-these-things.md
+ │   ├── Krishnamurti - Think on These Things.md
+ │   ├── Richard P. Feynman - &quot;Surely You're Joking, Mr. Feynman!&quot;.md
+ │   └── Robert Henri - The Art Spirit.md
  │
  ├── [other-group]
  │    └── ...
@@ -202,22 +203,22 @@ structure: nested-grouped
 <p>The output will be:</p>
 <pre><code class="language-plaintext">[output-directory]
  ├── my-vault
- │    ├── Krishnamurti - Think on These Things
- │    │    ├── 2021-11-02-182319-think-on-these-things.md
- │    │    ├── 2021-11-02-182426-think-on-these-things.md
- │    │    ├── 2021-11-02-182543-think-on-these-things.md
- │    │    ├── 2021-11-02-182648-think-on-these-things.md
- │    │    ├── 2021-11-02-182805-think-on-these-things.md
- │    │    └── Krishnamurti - Think on These Things.md
- │    ├── Richard P. Feynman - &quot;Surely You're Joking, Mr. Feynman!&quot;
- │    │    ├── 2021-11-02-182059-surely-youre-joking-mr-feynman.md
- │    │    └── Richard P. Feynman - &quot;Surely You're Joking, Mr. Feynman!&quot;.md
- │    └── Robert Henri - The Art Spirit
- │         ├── 2021-11-02-180445-the-art-spirit.md
- │         ├── 2021-11-02-181250-the-art-spirit.md
- │         ├── 2021-11-02-181325-the-art-spirit.md
- │         ├── 2021-11-02-181510-the-art-spirit.md
- │         └── Robert Henri - The Art Spirit.md`
+ │   ├── Krishnamurti - Think on These Things
+ │   │   ├── 2021-11-02-182319-think-on-these-things.md
+ │   │   ├── 2021-11-02-182426-think-on-these-things.md
+ │   │   ├── 2021-11-02-182543-think-on-these-things.md
+ │   │   ├── 2021-11-02-182648-think-on-these-things.md
+ │   │   ├── 2021-11-02-182805-think-on-these-things.md
+ │   │   └── Krishnamurti - Think on These Things.md
+ │   ├── Richard P. Feynman - &quot;Surely You're Joking, Mr. Feynman!&quot;
+ │   │   ├── 2021-11-02-182059-surely-youre-joking-mr-feynman.md
+ │   │   └── Richard P. Feynman - &quot;Surely You're Joking, Mr. Feynman!&quot;.md
+ │   └── Robert Henri - The Art Spirit
+ │       ├── 2021-11-02-180445-the-art-spirit.md
+ │       ├── 2021-11-02-181250-the-art-spirit.md
+ │       ├── 2021-11-02-181325-the-art-spirit.md
+ │       ├── 2021-11-02-181510-the-art-spirit.md
+ │       └── Robert Henri - The Art Spirit.md`
  │
  ├── [other-group]
  │    └── ...
@@ -256,18 +257,18 @@ structure: nested-grouped
 
 
 
-        <script>
+        <script type="text/javascript">
             window.playground_copyable = true;
         </script>
 
 
-        <script src="../elasticlunr.min.js"></script>
-        <script src="../mark.min.js"></script>
-        <script src="../searcher.js"></script>
+        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
 
-        <script src="../clipboard.min.js"></script>
-        <script src="../highlight.js"></script>
-        <script src="../book.js"></script>
+        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
 
